syntax = "proto3";

import "google/protobuf/empty.proto";

package users;

service UserService {

  rpc getUser(GetUserRequest) returns (UserResponse);
  rpc getUsers(google.protobuf.Empty) returns (UserListResponse);
  rpc createUser(CreateUserRequest) returns (UserResponse);
}

message GetUserRequest {
  int32 id = 1;
}

message CreateUserRequest {
  string firstName = 1;
  string lastName = 2;
}

message UserResponse {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
}

message UserListResponse {
  repeated UserResponse users = 1;
}